[package]
name = "BaseServer"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { verison = "1", features = ["full"] }
mio = "0.8"
log = "0.4.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
bincode = "1.3"